#ifndef DONKEYKONG_GAME_H
#define DONKEYKONG_GAME_H

#include "pch.h"
#include "StringHelpers.h"
#include "EntityManager.h"
#include "SpritesSheet.h"

#include "Platform.h"
#include "Ladder.h"
#include "Player.h"
#include "Mario.h"
#include "BonusItem.h"
#include "Barrel.h"
#include "Map.h"


#define MARIO_SPEED 100.f


class Game
{
public:
    Game();

    ~Game() = default;

    void run();


private:

    Map createMap(std::ifstream mapFile);

    void processEvents();

    void update(sf::Time elapsedTime);

    void render();

    void updateStatistics(sf::Time elapsedTime);

    void handlePlayerInput(sf::Keyboard::Key key, bool isPressed);

    Map basicMap();

    void addBlockLine(Map &map, int number, int posx, int posy);

    void addLadder(Map &map, int height, int posx, int posy);

    void addBonus(Map &map, int posx[3], int posy[3]);

private:

    static const float PlayerSpeed;
    static const sf::Time timePerFrame;

    Map map;
    SpritesSheet sps;

    sf::RenderWindow mWindow;
    sf::Texture mTexture;
    sf::Sprite mPlayer;
    sf::Font mFont;
    sf::Text mStatisticsText;
    sf::Time mStatisticsUpdateTime;

    std::size_t mStatisticsNumFrames;
    bool mIsMovingUp;
    bool mIsMovingDown;
    bool mIsMovingRight;
    bool mIsMovingLeft;
    bool debug;
    bool mJump;
    bool countElement;

    sf::Texture textureLadder;
    sf::Sprite ladder[LADDER_COUNT];
    sf::Texture texturePlatform;
    sf::Sprite block[BLOCK_COUNT_X][BLOCK_COUNT_Y];
    sf::Texture textureWeapon;
    sf::Sprite weapon;
    sf::Vector2u sizeBlock;
    sf::Vector2u sizeMario;
};

#endif